Correction du chemin du script d'initialisation dans docker-compose.yml après la suppression de 01-init.sql. Mise à jour des références pour assurer la cohérence des chemins dans le projet.

--- a/E3/vanna/vanna_ai_UI.ipynb
+++ b/E3/vanna/vanna_ai_UI.ipynb
@@ -77,7 +77,19 @@
      "output_type": "stream",
      "text": [
       "Using model gpt-4o-mini for 4128.75 tokens (approx)\n",
-      "Using model gpt-4o-mini for 130.25 tokens (approx)\n"
+      "Using model gpt-4o-mini for 130.25 tokens (approx)\n",
+      "Using model gpt-4o-mini for 4754.75 tokens (approx)\n",
+      "Using model gpt-4o-mini for 147.25 tokens (approx)\n",
+      "Using model gpt-4o-mini for 4442.0 tokens (approx)\n",
+      "Using model gpt-4o-mini for 111.75 tokens (approx)\n",
+      "Using model gpt-4o-mini for 5044.75 tokens (approx)\n",
+      "Using model gpt-4o-mini for 98.0 tokens (approx)\n",
+      "Using model gpt-4o-mini for 110.0 tokens (approx)\n",
+      "Using model gpt-4o-mini for 4379.0 tokens (approx)\n",
+      "Using model gpt-4o-mini for 5044.75 tokens (approx)\n",
+      "Using model gpt-4o-mini for 150.5 tokens (approx)\n",
+      "Using model gpt-4o-mini for 4581.25 tokens (approx)\n",
+      "Using model gpt-4o-mini for 730.75 tokens (approx)\n"
      ]
     }
    ],
