--- a/E3/vanna/vanna_ai_UI.ipynb
+++ b/E3/vanna/vanna_ai_UI.ipynb
@@ -48,7 +48,9 @@
      "output_type": "stream",
      "text": [
       "🔍 Langfuse monitoring activé!\n",
-      "📊 Dashboard: https://cloud.langfuse.com\n",
+      "📊 Dashboard: \n",
+      "https://cloud.langfuse.com \n",
+      "\n",
       "🚀 Toutes les requêtes OpenAI seront automatiquement trackées...\n",
       "✅ Configuration Langfuse détectée\n",
       "Your app is running at:\n",
@@ -76,20 +78,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using model gpt-4o-mini for 4128.75 tokens (approx)\n",
-      "Using model gpt-4o-mini for 130.25 tokens (approx)\n",
-      "Using model gpt-4o-mini for 4754.75 tokens (approx)\n",
-      "Using model gpt-4o-mini for 147.25 tokens (approx)\n",
-      "Using model gpt-4o-mini for 4442.0 tokens (approx)\n",
-      "Using model gpt-4o-mini for 111.75 tokens (approx)\n",
-      "Using model gpt-4o-mini for 5044.75 tokens (approx)\n",
-      "Using model gpt-4o-mini for 98.0 tokens (approx)\n",
-      "Using model gpt-4o-mini for 110.0 tokens (approx)\n",
-      "Using model gpt-4o-mini for 4379.0 tokens (approx)\n",
-      "Using model gpt-4o-mini for 5044.75 tokens (approx)\n",
-      "Using model gpt-4o-mini for 150.5 tokens (approx)\n",
-      "Using model gpt-4o-mini for 4581.25 tokens (approx)\n",
-      "Using model gpt-4o-mini for 730.75 tokens (approx)\n"
+      "Using model gpt-4o-mini for 4507.5 tokens (approx)\n",
+      "Using model gpt-4o-mini for 872.5 tokens (approx)\n",
+      "Using model gpt-4o-mini for 4507.5 tokens (approx)\n",
+      "Using model gpt-4o-mini for 872.5 tokens (approx)\n"
      ]
     }
    ],
@@ -100,7 +92,7 @@
     "flask_app = VannaFlaskApp(vn, allow_llm_to_see_data=True)\n",
     "\n",
     "print(\"🔍 Langfuse monitoring activé!\")\n",
-    "print(f\"📊 Dashboard: {os.getenv('LANGFUSE_HOST', 'https://cloud.langfuse.com')}\")\n",
+    "print(f\"📊 Dashboard: \\nhttps://cloud.langfuse.com \\n\")\n",
     "print(\"🚀 Toutes les requêtes OpenAI seront automatiquement trackées...\")\n",
     "\n",
     "# Vérifier la connexion Langfuse\n",
