Mise à jour des chemins des volumes dans docker-compose.yml pour pointer vers les nouveaux répertoires E4/api et E4/UI. Ajout de gestion des erreurs dans train.ipynb pour capturer les interruptions clavier et mise à jour des compteurs d'exécution dans plusieurs cellules. Ajout de nouveaux messages de sortie dans vanna_ai_UI.ipynb pour une meilleure traçabilité des opérations.

--- a/E3/vanna/vanna_ai_UI.ipynb
+++ b/E3/vanna/vanna_ai_UI.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using model gpt-4o-mini for 3001.25 tokens (approx)\n"
+      "Using model gpt-4o-mini for 3001.25 tokens (approx)\n",
+      "Using model gpt-4o-mini for 156.25 tokens (approx)\n"
      ]
     }
    ],
