--- a/E3/vanna/vanna_ai_UI.ipynb
+++ b/E3/vanna/vanna_ai_UI.ipynb
@@ -55,6 +55,29 @@
       " * Serving Flask app 'vanna.flask'\n",
       " * Debug mode: on\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Add of existing embedding ID: 6ad00744-f6f1-5fda-9243-b2de39cd6989-sql\n",
+      "Add of existing embedding ID: 25e202bb-2fcc-55f2-8a59-f4b872d71187-sql\n",
+      "Add of existing embedding ID: 352c3c4f-4364-57e0-a468-43d3b72c246b-sql\n",
+      "Add of existing embedding ID: 8b9021c1-0aa4-5cf1-8b0a-e0bcedc10a21-sql\n",
+      "Add of existing embedding ID: 6a580a8e-dc98-5e55-bcdf-e43c130baa0e-sql\n",
+      "Add of existing embedding ID: a2d56652-10b8-57b4-afdd-86aae9060c55-sql\n",
+      "Add of existing embedding ID: 7f41cbc3-77d9-5b7c-b4c0-e21509702257-sql\n",
+      "Add of existing embedding ID: a3a8a2c5-a0ae-5652-af1a-6459b89bc74d-sql\n",
+      "Add of existing embedding ID: f8b8dc1a-6cb1-5032-88c1-d84c16d370af-sql\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using model gpt-4o-mini for 3204.0 tokens (approx)\n",
+      "Using model gpt-4o-mini for 130.25 tokens (approx)\n"
+     ]
     }
    ],
    "source": [
