--- a/E2/openai.ipynb
+++ b/E2/openai.ipynb
@@ -2,15 +2,219 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting vanna[openai]\n",
+      "  Using cached vanna-0.7.9-py3-none-any.whl.metadata (15 kB)\n",
+      "Collecting requests (from vanna[openai])\n",
+      "  Using cached requests-2.32.4-py3-none-any.whl.metadata (4.9 kB)\n",
+      "Requirement already satisfied: tabulate in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from vanna[openai]) (0.9.0)\n",
+      "Collecting plotly (from vanna[openai])\n",
+      "  Using cached plotly-6.2.0-py3-none-any.whl.metadata (8.5 kB)\n",
+      "Collecting pandas (from vanna[openai])\n",
+      "  Using cached pandas-2.3.1-cp312-cp312-win_amd64.whl.metadata (19 kB)\n",
+      "Requirement already satisfied: sqlparse in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from vanna[openai]) (0.5.3)\n",
+      "Collecting kaleido (from vanna[openai])\n",
+      "  Using cached kaleido-1.0.0-py3-none-any.whl.metadata (5.6 kB)\n",
+      "Collecting flask (from vanna[openai])\n",
+      "  Using cached flask-3.1.1-py3-none-any.whl.metadata (3.0 kB)\n",
+      "Collecting flask-sock (from vanna[openai])\n",
+      "  Using cached flask_sock-0.7.0-py3-none-any.whl.metadata (1.6 kB)\n",
+      "Collecting flasgger (from vanna[openai])\n",
+      "  Using cached flasgger-0.9.7.1-py2.py3-none-any.whl\n",
+      "Collecting sqlalchemy (from vanna[openai])\n",
+      "  Using cached sqlalchemy-2.0.41-cp312-cp312-win_amd64.whl.metadata (9.8 kB)\n",
+      "Collecting openai (from vanna[openai])\n",
+      "  Using cached openai-1.97.0-py3-none-any.whl.metadata (29 kB)\n",
+      "Requirement already satisfied: PyYAML>=3.0 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from flasgger->vanna[openai]) (6.0.2)\n",
+      "Collecting jsonschema>=3.0.1 (from flasgger->vanna[openai])\n",
+      "  Using cached jsonschema-4.25.0-py3-none-any.whl.metadata (7.7 kB)\n",
+      "Collecting mistune (from flasgger->vanna[openai])\n",
+      "  Using cached mistune-3.1.3-py3-none-any.whl.metadata (1.8 kB)\n",
+      "Requirement already satisfied: six>=1.10.0 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from flasgger->vanna[openai]) (1.17.0)\n",
+      "Requirement already satisfied: packaging in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from flasgger->vanna[openai]) (25.0)\n",
+      "Collecting blinker>=1.9.0 (from flask->vanna[openai])\n",
+      "  Using cached blinker-1.9.0-py3-none-any.whl.metadata (1.6 kB)\n",
+      "Collecting click>=8.1.3 (from flask->vanna[openai])\n",
+      "  Using cached click-8.2.1-py3-none-any.whl.metadata (2.5 kB)\n",
+      "Collecting itsdangerous>=2.2.0 (from flask->vanna[openai])\n",
+      "  Using cached itsdangerous-2.2.0-py3-none-any.whl.metadata (1.9 kB)\n",
+      "Collecting jinja2>=3.1.2 (from flask->vanna[openai])\n",
+      "  Using cached jinja2-3.1.6-py3-none-any.whl.metadata (2.9 kB)\n",
+      "Collecting markupsafe>=2.1.1 (from flask->vanna[openai])\n",
+      "  Using cached MarkupSafe-3.0.2-cp312-cp312-win_amd64.whl.metadata (4.1 kB)\n",
+      "Collecting werkzeug>=3.1.0 (from flask->vanna[openai])\n",
+      "  Using cached werkzeug-3.1.3-py3-none-any.whl.metadata (3.7 kB)\n",
+      "Requirement already satisfied: colorama in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from click>=8.1.3->flask->vanna[openai]) (0.4.6)\n",
+      "Collecting attrs>=22.2.0 (from jsonschema>=3.0.1->flasgger->vanna[openai])\n",
+      "  Using cached attrs-25.3.0-py3-none-any.whl.metadata (10 kB)\n",
+      "Collecting jsonschema-specifications>=2023.03.6 (from jsonschema>=3.0.1->flasgger->vanna[openai])\n",
+      "  Using cached jsonschema_specifications-2025.4.1-py3-none-any.whl.metadata (2.9 kB)\n",
+      "Collecting referencing>=0.28.4 (from jsonschema>=3.0.1->flasgger->vanna[openai])\n",
+      "  Using cached referencing-0.36.2-py3-none-any.whl.metadata (2.8 kB)\n",
+      "Requirement already satisfied: rpds-py>=0.7.1 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from jsonschema>=3.0.1->flasgger->vanna[openai]) (0.26.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.4.0 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from referencing>=0.28.4->jsonschema>=3.0.1->flasgger->vanna[openai]) (4.14.1)\n",
+      "Collecting simple-websocket>=0.5.1 (from flask-sock->vanna[openai])\n",
+      "  Using cached simple_websocket-1.1.0-py3-none-any.whl.metadata (1.5 kB)\n",
+      "Collecting wsproto (from simple-websocket>=0.5.1->flask-sock->vanna[openai])\n",
+      "  Using cached wsproto-1.2.0-py3-none-any.whl.metadata (5.6 kB)\n",
+      "Collecting choreographer>=1.0.5 (from kaleido->vanna[openai])\n",
+      "  Using cached choreographer-1.0.9-py3-none-any.whl.metadata (5.6 kB)\n",
+      "Collecting logistro>=1.0.8 (from kaleido->vanna[openai])\n",
+      "  Using cached logistro-1.1.0-py3-none-any.whl.metadata (2.6 kB)\n",
+      "Requirement already satisfied: orjson>=3.10.15 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from kaleido->vanna[openai]) (3.11.0)\n",
+      "Requirement already satisfied: simplejson>=3.19.3 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from choreographer>=1.0.5->kaleido->vanna[openai]) (3.20.1)\n",
+      "Collecting anyio<5,>=3.5.0 (from openai->vanna[openai])\n",
+      "  Using cached anyio-4.9.0-py3-none-any.whl.metadata (4.7 kB)\n",
+      "Collecting distro<2,>=1.7.0 (from openai->vanna[openai])\n",
+      "  Using cached distro-1.9.0-py3-none-any.whl.metadata (6.8 kB)\n",
+      "Collecting httpx<1,>=0.23.0 (from openai->vanna[openai])\n",
+      "  Using cached httpx-0.28.1-py3-none-any.whl.metadata (7.1 kB)\n",
+      "Collecting jiter<1,>=0.4.0 (from openai->vanna[openai])\n",
+      "  Using cached jiter-0.10.0-cp312-cp312-win_amd64.whl.metadata (5.3 kB)\n",
+      "Collecting pydantic<3,>=1.9.0 (from openai->vanna[openai])\n",
+      "  Using cached pydantic-2.11.7-py3-none-any.whl.metadata (67 kB)\n",
+      "Requirement already satisfied: sniffio in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from openai->vanna[openai]) (1.3.1)\n",
+      "Requirement already satisfied: tqdm>4 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from openai->vanna[openai]) (4.67.1)\n",
+      "Collecting idna>=2.8 (from anyio<5,>=3.5.0->openai->vanna[openai])\n",
+      "  Using cached idna-3.10-py3-none-any.whl.metadata (10 kB)\n",
+      "Collecting certifi (from httpx<1,>=0.23.0->openai->vanna[openai])\n",
+      "  Using cached certifi-2025.7.14-py3-none-any.whl.metadata (2.4 kB)\n",
+      "Collecting httpcore==1.* (from httpx<1,>=0.23.0->openai->vanna[openai])\n",
+      "  Using cached httpcore-1.0.9-py3-none-any.whl.metadata (21 kB)\n",
+      "Collecting h11>=0.16 (from httpcore==1.*->httpx<1,>=0.23.0->openai->vanna[openai])\n",
+      "  Using cached h11-0.16.0-py3-none-any.whl.metadata (8.3 kB)\n",
+      "Collecting annotated-types>=0.6.0 (from pydantic<3,>=1.9.0->openai->vanna[openai])\n",
+      "  Using cached annotated_types-0.7.0-py3-none-any.whl.metadata (15 kB)\n",
+      "Collecting pydantic-core==2.33.2 (from pydantic<3,>=1.9.0->openai->vanna[openai])\n",
+      "  Using cached pydantic_core-2.33.2-cp312-cp312-win_amd64.whl.metadata (6.9 kB)\n",
+      "Collecting typing-inspection>=0.4.0 (from pydantic<3,>=1.9.0->openai->vanna[openai])\n",
+      "  Using cached typing_inspection-0.4.1-py3-none-any.whl.metadata (2.6 kB)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from pandas->vanna[openai]) (2.3.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from pandas->vanna[openai]) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from pandas->vanna[openai]) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from pandas->vanna[openai]) (2025.2)\n",
+      "Collecting narwhals>=1.15.1 (from plotly->vanna[openai])\n",
+      "  Using cached narwhals-1.47.1-py3-none-any.whl.metadata (11 kB)\n",
+      "Collecting charset_normalizer<4,>=2 (from requests->vanna[openai])\n",
+      "  Using cached charset_normalizer-3.4.2-cp312-cp312-win_amd64.whl.metadata (36 kB)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from requests->vanna[openai]) (2.5.0)\n",
+      "Collecting greenlet>=1 (from sqlalchemy->vanna[openai])\n",
+      "  Using cached greenlet-3.2.3-cp312-cp312-win_amd64.whl.metadata (4.2 kB)\n",
+      "Using cached vanna-0.7.9-py3-none-any.whl (213 kB)\n",
+      "Using cached flask-3.1.1-py3-none-any.whl (103 kB)\n",
+      "Using cached blinker-1.9.0-py3-none-any.whl (8.5 kB)\n",
+      "Using cached click-8.2.1-py3-none-any.whl (102 kB)\n",
+      "Using cached itsdangerous-2.2.0-py3-none-any.whl (16 kB)\n",
+      "Using cached jinja2-3.1.6-py3-none-any.whl (134 kB)\n",
+      "Using cached jsonschema-4.25.0-py3-none-any.whl (89 kB)\n",
+      "Using cached attrs-25.3.0-py3-none-any.whl (63 kB)\n",
+      "Using cached jsonschema_specifications-2025.4.1-py3-none-any.whl (18 kB)\n",
+      "Using cached MarkupSafe-3.0.2-cp312-cp312-win_amd64.whl (15 kB)\n",
+      "Using cached referencing-0.36.2-py3-none-any.whl (26 kB)\n",
+      "Using cached werkzeug-3.1.3-py3-none-any.whl (224 kB)\n",
+      "Using cached flask_sock-0.7.0-py3-none-any.whl (4.0 kB)\n",
+      "Using cached simple_websocket-1.1.0-py3-none-any.whl (13 kB)\n",
+      "Using cached kaleido-1.0.0-py3-none-any.whl (51 kB)\n",
+      "Using cached choreographer-1.0.9-py3-none-any.whl (51 kB)\n",
+      "Using cached logistro-1.1.0-py3-none-any.whl (7.9 kB)\n",
+      "Using cached mistune-3.1.3-py3-none-any.whl (53 kB)\n",
+      "Using cached openai-1.97.0-py3-none-any.whl (764 kB)\n",
+      "Using cached anyio-4.9.0-py3-none-any.whl (100 kB)\n",
+      "Using cached distro-1.9.0-py3-none-any.whl (20 kB)\n",
+      "Using cached httpx-0.28.1-py3-none-any.whl (73 kB)\n",
+      "Using cached httpcore-1.0.9-py3-none-any.whl (78 kB)\n",
+      "Using cached jiter-0.10.0-cp312-cp312-win_amd64.whl (206 kB)\n",
+      "Using cached pydantic-2.11.7-py3-none-any.whl (444 kB)\n",
+      "Using cached pydantic_core-2.33.2-cp312-cp312-win_amd64.whl (2.0 MB)\n",
+      "Using cached annotated_types-0.7.0-py3-none-any.whl (13 kB)\n",
+      "Using cached h11-0.16.0-py3-none-any.whl (37 kB)\n",
+      "Using cached idna-3.10-py3-none-any.whl (70 kB)\n",
+      "Using cached typing_inspection-0.4.1-py3-none-any.whl (14 kB)\n",
+      "Using cached certifi-2025.7.14-py3-none-any.whl (162 kB)\n",
+      "Using cached pandas-2.3.1-cp312-cp312-win_amd64.whl (11.0 MB)\n",
+      "Using cached plotly-6.2.0-py3-none-any.whl (9.6 MB)\n",
+      "Using cached narwhals-1.47.1-py3-none-any.whl (375 kB)\n",
+      "Using cached requests-2.32.4-py3-none-any.whl (64 kB)\n",
+      "Using cached charset_normalizer-3.4.2-cp312-cp312-win_amd64.whl (105 kB)\n",
+      "Using cached sqlalchemy-2.0.41-cp312-cp312-win_amd64.whl (2.1 MB)\n",
+      "Using cached greenlet-3.2.3-cp312-cp312-win_amd64.whl (297 kB)\n",
+      "Using cached wsproto-1.2.0-py3-none-any.whl (24 kB)\n",
+      "Installing collected packages: typing-inspection, pydantic-core, narwhals, mistune, markupsafe, logistro, jiter, itsdangerous, idna, h11, greenlet, distro, click, charset_normalizer, certifi, blinker, attrs, annotated-types, wsproto, werkzeug, sqlalchemy, requests, referencing, pydantic, plotly, pandas, jinja2, httpcore, choreographer, anyio, simple-websocket, kaleido, jsonschema-specifications, httpx, flask, openai, jsonschema, flask-sock, flasgger, vanna\n",
+      "\n",
+      "   - --------------------------------------  1/40 [pydantic-core]\n",
+      "   -- -------------------------------------  2/40 [narwhals]\n",
+      "   -- -------------------------------------  2/40 [narwhals]\n",
+      "   -- -------------------------------------  2/40 [narwhals]\n",
+      "   -- -------------------------------------  2/40 [narwhals]\n",
+      "   -- -------------------------------------  2/40 [narwhals]\n",
+      "   -- -------------------------------------  2/40 [narwhals]\n",
+      "   -- -------------------------------------  2/40 [narwhals]\n",
+      "   -- -------------------------------------  2/40 [narwhals]\n",
+      "   -- -------------------------------------  2/40 [narwhals]\n",
+      "   --- ------------------------------------  3/40 [mistune]\n",
+      "   --- ------------------------------------  3/40 [mistune]\n",
+      "   ------ ---------------------------------  6/40 [jiter]\n",
+      "   -------- -------------------------------  8/40 [idna]\n",
+      "   --------- ------------------------------  9/40 [h11]\n",
+      "   ---------- ----------------------------- 10/40 [greenlet]\n",
+      "   ---------- ----------------------------- 10/40 [greenlet]\n",
+      "   ----------- ---------------------------- 11/40 [distro]\n",
+      "   ------------ --------------------------- 12/40 [click]\n",
+      "   ------------ --------------------------- 12/40 [click]\n",
+      "   ------------- -------------------------- 13/40 [charset_normalizer]\n",
+      "   --------------- ------------------------ 15/40 [blinker]\n",
+      "   ---------------- ----------------------- 16/40 [attrs]\n",
+      "   ------------------- -------------------- 19/40 [werkzeug]\n",
+      "   ------------------- -------------------- 19/40 [werkzeug]\n",
+      "   ------------------- -------------------- 19/40 [werkzeug]\n",
+      "   ------------------- -------------------- 19/40 [werkzeug]\n",
+      "   ------------------- -------------------- 19/40 [werkzeug]\n",
+      "   -------------------- ------------------- 20/40 [sqlalchemy]\n",
+      "   -------------------- ------------------- 20/40 [sqlalchemy]\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Could not install packages due to an OSError: [WinError 32] Le processus ne peut pas accéder au fichier car ce fichier est utilisé par un autre processus: 'c:\\\\Users\\\\eliec\\\\Documents\\\\Code\\\\Certif_DevIA\\\\.venv\\\\Lib\\\\site-packages\\\\sqlalchemy\\\\orm\\\\state_changes.py'\n",
+      "Check the permissions.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: python-dotenv in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (1.1.1)\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'vanna'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m get_ipython().system(\u001b[33m'\u001b[39m\u001b[33mpip install vanna[openai]\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      2\u001b[39m get_ipython().system(\u001b[33m'\u001b[39m\u001b[33mpip install python-dotenv\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mvanna\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mopenai\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m OpenAI_Chat\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mvanna\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mvannadb\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m VannaDB_VectorStore\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mvanna\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mflask\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m VannaFlaskApp\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'vanna'"
+     ]
+    }
+   ],
    "source": [
     "!pip install vanna[openai]\n",
     "!pip install python-dotenv\n",
     "\n",
     "from vanna.openai import OpenAI_Chat\n",
     "from vanna.vannadb import VannaDB_VectorStore\n",
+    "from vanna.flask import VannaFlaskApp\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv()\n",
@@ -505,7 +709,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from vanna.flask import VannaFlaskApp\n",
+    "\n",
     "VannaFlaskApp(vn, allow_llm_to_see_data=False).run()"
    ]
   }
@@ -517,7 +721,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.2"
   }
  },
