Ajout de la documentation pour la base de données Sakila, incluant des questions de test, des détails sur la structure des tables, et des exemples de requêtes SQL. Création de fichiers README.md et QUESTIONS_TEST.md pour faciliter la compréhension et l'utilisation de la base de données. Mise à jour du notebook sakila.ipynb avec des paires question/SQL pour l'entraînement du modèle.

--- a/E2/sakila.ipynb
+++ b/E2/sakila.ipynb
@@ -521,6 +521,169 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "bb94e494",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training with question: Quels sont les films d'action les plus loués ?\n",
+      "Training with question: Liste des films qui n'ont jamais été loués\n",
+      "Training with question: Qui sont les 10 meilleurs clients en termes de montant dépensé ?\n",
+      "Training with question: Nombre de clients par pays\n",
+      "Training with question: Chiffre d'affaires par catégorie de film\n",
+      "Training with question: Performance des vendeurs (nombre de locations et montant)\n",
+      "Training with question: Durée moyenne de location par catégorie de film\n",
+      "Training with question: Films les plus rentables (ratio revenu/coût)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Entraînement avec des paires question/SQL\n",
+    "training_data = [\n",
+    "    # Questions sur les Films\n",
+    "    {\n",
+    "        \"question\": \"Quels sont les films d'action les plus loués ?\",\n",
+    "        \"sql\": \"\"\"\n",
+    "        SELECT f.title, c.name as category, COUNT(r.rental_id) as rental_count\n",
+    "        FROM film f\n",
+    "        JOIN film_category fc ON f.film_id = fc.film_id\n",
+    "        JOIN category c ON fc.category_id = c.category_id\n",
+    "        JOIN inventory i ON f.film_id = i.film_id\n",
+    "        JOIN rental r ON i.inventory_id = r.inventory_id\n",
+    "        WHERE c.name = 'Action'\n",
+    "        GROUP BY f.film_id, f.title, c.name\n",
+    "        ORDER BY rental_count DESC\n",
+    "        LIMIT 10\n",
+    "        \"\"\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"question\": \"Liste des films qui n'ont jamais été loués\",\n",
+    "        \"sql\": \"\"\"\n",
+    "        SELECT f.title, f.release_year, f.rental_rate\n",
+    "        FROM film f\n",
+    "        LEFT JOIN inventory i ON f.film_id = i.film_id\n",
+    "        LEFT JOIN rental r ON i.inventory_id = r.inventory_id\n",
+    "        WHERE r.rental_id IS NULL\n",
+    "        \"\"\"\n",
+    "    },\n",
+    "    \n",
+    "    # Questions sur les Clients\n",
+    "    {\n",
+    "        \"question\": \"Qui sont les 10 meilleurs clients en termes de montant dépensé ?\",\n",
+    "        \"sql\": \"\"\"\n",
+    "        SELECT \n",
+    "            c.first_name || ' ' || c.last_name as customer_name,\n",
+    "            COUNT(r.rental_id) as rental_count,\n",
+    "            SUM(p.amount) as total_spent\n",
+    "        FROM customer c\n",
+    "        JOIN rental r ON c.customer_id = r.customer_id\n",
+    "        JOIN payment p ON r.rental_id = p.rental_id\n",
+    "        GROUP BY c.customer_id, c.first_name, c.last_name\n",
+    "        ORDER BY total_spent DESC\n",
+    "        LIMIT 10\n",
+    "        \"\"\"\n",
+    "    },\n",
+    "    \n",
+    "    # Questions sur la Géographie\n",
+    "    {\n",
+    "        \"question\": \"Nombre de clients par pays\",\n",
+    "        \"sql\": \"\"\"\n",
+    "        SELECT co.country, COUNT(DISTINCT c.customer_id) as customer_count\n",
+    "        FROM customer c\n",
+    "        JOIN address a ON c.address_id = a.address_id\n",
+    "        JOIN city ci ON a.city_id = ci.city_id\n",
+    "        JOIN country co ON ci.country_id = co.country_id\n",
+    "        GROUP BY co.country\n",
+    "        ORDER BY customer_count DESC\n",
+    "        \"\"\"\n",
+    "    },\n",
+    "    \n",
+    "    # Questions Business\n",
+    "    {\n",
+    "        \"question\": \"Chiffre d'affaires par catégorie de film\",\n",
+    "        \"sql\": \"\"\"\n",
+    "        SELECT \n",
+    "            c.name as category,\n",
+    "            COUNT(r.rental_id) as rental_count,\n",
+    "            SUM(p.amount) as revenue\n",
+    "        FROM category c\n",
+    "        JOIN film_category fc ON c.category_id = fc.category_id\n",
+    "        JOIN film f ON fc.film_id = f.film_id\n",
+    "        JOIN inventory i ON f.film_id = i.film_id\n",
+    "        JOIN rental r ON i.inventory_id = r.inventory_id\n",
+    "        JOIN payment p ON r.rental_id = p.rental_id\n",
+    "        GROUP BY c.category_id, c.name\n",
+    "        ORDER BY revenue DESC\n",
+    "        \"\"\"\n",
+    "    },\n",
+    "    \n",
+    "    # Questions sur les Employés\n",
+    "    {\n",
+    "        \"question\": \"Performance des vendeurs (nombre de locations et montant)\",\n",
+    "        \"sql\": \"\"\"\n",
+    "        SELECT \n",
+    "            s.first_name || ' ' || s.last_name as staff_name,\n",
+    "            COUNT(r.rental_id) as rental_count,\n",
+    "            SUM(p.amount) as total_amount\n",
+    "        FROM staff s\n",
+    "        JOIN rental r ON s.staff_id = r.staff_id\n",
+    "        JOIN payment p ON r.rental_id = p.rental_id\n",
+    "        GROUP BY s.staff_id, s.first_name, s.last_name\n",
+    "        ORDER BY total_amount DESC\n",
+    "        \"\"\"\n",
+    "    },\n",
+    "    \n",
+    "    # Questions sur les Locations\n",
+    "    {\n",
+    "        \"question\": \"Durée moyenne de location par catégorie de film\",\n",
+    "        \"sql\": \"\"\"\n",
+    "        SELECT \n",
+    "            c.name as category,\n",
+    "            AVG(JULIANDAY(r.return_date) - JULIANDAY(r.rental_date)) as avg_rental_duration\n",
+    "        FROM category c\n",
+    "        JOIN film_category fc ON c.category_id = fc.category_id\n",
+    "        JOIN film f ON fc.film_id = f.film_id\n",
+    "        JOIN inventory i ON f.film_id = i.film_id\n",
+    "        JOIN rental r ON i.inventory_id = r.inventory_id\n",
+    "        WHERE r.return_date IS NOT NULL\n",
+    "        GROUP BY c.category_id, c.name\n",
+    "        ORDER BY avg_rental_duration DESC\n",
+    "        \"\"\"\n",
+    "    },\n",
+    "    \n",
+    "    # Questions Complexes\n",
+    "    {\n",
+    "        \"question\": \"Films les plus rentables (ratio revenu/coût)\",\n",
+    "        \"sql\": \"\"\"\n",
+    "        SELECT \n",
+    "            f.title,\n",
+    "            COUNT(r.rental_id) as rental_count,\n",
+    "            SUM(p.amount) as total_revenue,\n",
+    "            f.replacement_cost,\n",
+    "            ROUND(SUM(p.amount) / f.replacement_cost, 2) as roi\n",
+    "        FROM film f\n",
+    "        JOIN inventory i ON f.film_id = i.film_id\n",
+    "        JOIN rental r ON i.inventory_id = r.inventory_id\n",
+    "        JOIN payment p ON r.rental_id = p.rental_id\n",
+    "        GROUP BY f.film_id, f.title, f.replacement_cost\n",
+    "        HAVING rental_count > 5\n",
+    "        ORDER BY roi DESC\n",
+    "        LIMIT 10\n",
+    "        \"\"\"\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# Entraînement du modèle avec les paires question/SQL\n",
+    "for item in training_data:\n",
+    "    print(f\"Training with question: {item['question']}\")\n",
+    "    vn.train(question=item['question'], sql=item['sql'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "c79667da",
    "metadata": {},
    "outputs": [
@@ -531,12 +694,14 @@
       "Your app is running at:\n",
       "http://localhost:8084\n",
       " * Serving Flask app 'vanna.flask'\n",
-      " * Debug mode: on\n"
+      " * Debug mode: on\n",
+      "Using model gpt-4o-mini for 4059.0 tokens (approx)\n",
+      "Using model gpt-4o-mini for 1998.25 tokens (approx)\n"
      ]
     }
    ],
    "source": [
-    "VannaFlaskApp(vn, allow_llm_to_see_data=False).run()"
+    "VannaFlaskApp(vn, allow_llm_to_see_data=True).run()"
    ]
   }
  ],
