Update sakila.ipynb to modify execution counts, enhance training questions, and improve SQL query formatting. Removed unnecessary imports and adjusted output handling for better clarity in data presentation.

--- a/E2/sakila.ipynb
+++ b/E2/sakila.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "896218c7",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,6 @@
     "from vanna.openai import OpenAI_Chat\n",
     "from vanna.base import VannaBase\n",
     "from vanna.flask import VannaFlaskApp\n",
-    "from vanna.vannadb import VannaDB_VectorStore\n",
     "from vanna.flask.auth import AuthInterface\n",
     "import flask\n",
     "import os\n",
@@ -194,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vn.connect_to_sqlite('sqlite-sakila.db')\n"
+    "vn.connect_to_sqlite('sqlite-sakila.db')"
    ]
   },
   {
@@ -621,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "bb94e494",
    "metadata": {},
    "outputs": [
@@ -631,11 +630,18 @@
      "text": [
       "Training with question: Quels sont les films d'action les plus loués ?\n",
       "Training with question: Liste des films qui n'ont jamais été loués\n",
+      "Training with question: Quels sont les 10 films les plus loués ?\n",
+      "Training with question: Quels sont les 10 acteurs ayant joué dans le plus de films ?\n",
       "Training with question: Qui sont les 10 meilleurs clients en termes de montant dépensé ?\n",
+      "Training with question: Quels clients ont dépensé le plus ?\n",
       "Training with question: Nombre de clients par pays\n",
+      "Training with question: Combien de clients y a-t-il par pays ?\n",
       "Training with question: Chiffre d'affaires par catégorie de film\n",
+      "Training with question: Combien de films sont disponibles dans chaque magasin ?\n",
       "Training with question: Performance des vendeurs (nombre de locations et montant)\n",
       "Training with question: Durée moyenne de location par catégorie de film\n",
+      "Training with question: Quels sont les films qui n'ont jamais été loués ?\n",
+      "Training with question: Quelle est la durée moyenne de location par catégorie de film ?\n",
       "Training with question: Films les plus rentables (ratio revenu/coût)\n"
      ]
     }
@@ -692,7 +698,8 @@
     "    \"question\": \"Quels sont les 10 acteurs ayant joué dans le plus de films ?\",\n",
     "    \"sql\": \"\"\"\n",
     "    SELECT \n",
-    "        a.first_name || ' ' || a.last_name AS actor_name,\n",
+    "        a.first_name as actor_first_name,\n",
+    "        a.last_name as actor_last_name,\n",
     "        COUNT(fa.film_id) AS film_count\n",
     "    FROM actor AS a\n",
     "    JOIN film_actor AS fa ON a.actor_id = fa.actor_id\n",
@@ -722,7 +729,8 @@
     "    \"question\": \"Quels clients ont dépensé le plus ?\",\n",
     "    \"sql\": \"\"\"\n",
     "    SELECT \n",
-    "        c.first_name || ' ' || c.last_name AS customer_full_name,\n",
+    "        c.first_name as customer_first_name,\n",
+    "        c.last_name as customer_last_name,\n",
     "        SUM(p.amount) AS total_spent\n",
     "    FROM customer AS c\n",
     "    JOIN payment AS p ON c.customer_id = p.customer_id\n",
@@ -795,7 +803,8 @@
     "        \"question\": \"Performance des vendeurs (nombre de locations et montant)\",\n",
     "        \"sql\": \"\"\"\n",
     "        SELECT \n",
-    "            staff.first_name || ' ' || staff.last_name AS staff_full_name,\n",
+    "            staff.first_name as staff_first_name,\n",
+    "            staff.last_name as staff_last_name,\n",
     "            COUNT(rental.rental_id) AS total_rentals,\n",
     "            SUM(payment.amount) AS total_sales\n",
     "        FROM staff AS staff\n",
@@ -879,11 +888,145 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c79667da",
+   "id": "b67ba231",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ddl</th>\n",
+       "      <th>documentation</th>\n",
+       "      <th>question_sql</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CREATE TABLE actor (\\n  actor_id numeric NOT N...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>(Quels sont les films d'action les plus loués ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CREATE INDEX idx_actor_last_name ON actor(last...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>(Liste des films qui n'ont jamais été loués, \\...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CREATE TRIGGER actor_trigger_ai AFTER INSERT O...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>(Quels sont les 10 films les plus loués ?, \\n ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CREATE TRIGGER actor_trigger_au AFTER UPDATE O...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>(Quels sont les 10 acteurs ayant joué dans le ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CREATE TABLE country (\\n  country_id SMALLINT ...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>(Qui sont les 10 meilleurs clients en termes d...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>CREATE VIEW customer_list\\nAS\\nSELECT cu.custo...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>CREATE VIEW film_list\\nAS\\nSELECT film.film_id...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>CREATE VIEW staff_list\\nAS\\nSELECT s.staff_id ...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>CREATE VIEW sales_by_store\\nAS\\nSELECT\\n  s.st...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>CREATE VIEW sales_by_film_category\\nAS\\nSELECT...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>75 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  ddl documentation  \\\n",
+       "0   CREATE TABLE actor (\\n  actor_id numeric NOT N...          None   \n",
+       "1   CREATE INDEX idx_actor_last_name ON actor(last...          None   \n",
+       "2   CREATE TRIGGER actor_trigger_ai AFTER INSERT O...          None   \n",
+       "3   CREATE TRIGGER actor_trigger_au AFTER UPDATE O...          None   \n",
+       "4   CREATE TABLE country (\\n  country_id SMALLINT ...          None   \n",
+       "..                                                ...           ...   \n",
+       "70  CREATE VIEW customer_list\\nAS\\nSELECT cu.custo...          None   \n",
+       "71  CREATE VIEW film_list\\nAS\\nSELECT film.film_id...          None   \n",
+       "72  CREATE VIEW staff_list\\nAS\\nSELECT s.staff_id ...          None   \n",
+       "73  CREATE VIEW sales_by_store\\nAS\\nSELECT\\n  s.st...          None   \n",
+       "74  CREATE VIEW sales_by_film_category\\nAS\\nSELECT...          None   \n",
+       "\n",
+       "                                         question_sql  \n",
+       "0   (Quels sont les films d'action les plus loués ...  \n",
+       "1   (Liste des films qui n'ont jamais été loués, \\...  \n",
+       "2   (Quels sont les 10 films les plus loués ?, \\n ...  \n",
+       "3   (Quels sont les 10 acteurs ayant joué dans le ...  \n",
+       "4   (Qui sont les 10 meilleurs clients en termes d...  \n",
+       "..                                                ...  \n",
+       "70                                               None  \n",
+       "71                                               None  \n",
+       "72                                               None  \n",
+       "73                                               None  \n",
+       "74                                               None  \n",
+       "\n",
+       "[75 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# VannaFlaskApp(vn, allow_llm_to_see_data=True).run()"
+    "training_data = vn.get_training_data()\n",
+    "training_data"
    ]
   },
   {
@@ -900,8 +1043,10 @@
       "http://localhost:8084\n",
       " * Serving Flask app 'vanna.flask'\n",
       " * Debug mode: on\n",
-      "Using model gpt-4o-mini for 4063.25 tokens (approx)\n",
-      "Using model gpt-4o-mini for 138.75 tokens (approx)\n"
+      "Using model gpt-4o-mini for 4054.25 tokens (approx)\n",
+      "Using model gpt-4o-mini for 106.75 tokens (approx)\n",
+      "Using model gpt-4o-mini for 4059.25 tokens (approx)\n",
+      "Using model gpt-4o-mini for 90.75 tokens (approx)\n"
      ]
     }
    ],
@@ -1059,7 +1204,7 @@
     "    title=\"E2 - Sakila\",\n",
     "    subtitle=\"Interrogez la base de données Sakila\",\n",
     "    show_training_data=True,\n",
-    "    sql=False,\n",
+    "    sql=True,\n",
     "    table=True,\n",
     "    chart=False,\n",
     "    summarization=True,\n",
