Update README and Jupyter notebook for MyVanna service
- Revised the README.md to provide a comprehensive overview of the MyVanna service, including installation instructions, service objectives, and configuration details.
- Enhanced the Jupyter notebook (sakila.ipynb) with updated environment variable configurations for Langfuse and improved execution flow.
- Removed outdated files (sakila copy.ipynb and SAKILA_DOCUMENTATION.md) to streamline the project structure and eliminate redundancy.

--- a/E2/sakila.ipynb
+++ b/E2/sakila.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "896218c7",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
       "Requirement already satisfied: jsonschema>=3.0.1 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from flasgger->vanna[openai]) (4.25.0)\n",
       "Requirement already satisfied: mistune in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from flasgger->vanna[openai]) (3.1.3)\n",
       "Requirement already satisfied: six>=1.10.0 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from flasgger->vanna[openai]) (1.17.0)\n",
-      "Requirement already satisfied: packaging in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from flasgger->vanna[openai]) (25.0)\n",
+      "Requirement already satisfied: packaging in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from flasgger->vanna[openai]) (24.2)\n",
       "Requirement already satisfied: blinker>=1.9.0 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from flask->vanna[openai]) (1.9.0)\n",
       "Requirement already satisfied: click>=8.1.3 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from flask->vanna[openai]) (8.2.1)\n",
       "Requirement already satisfied: itsdangerous>=2.2.0 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from flask->vanna[openai]) (2.2.0)\n",
@@ -76,6 +76,39 @@
       "Requirement already satisfied: pytz>=2020.1 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from pandas) (2025.2)\n",
       "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from pandas) (2025.2)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: langfuse in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (3.2.1)\n",
+      "Requirement already satisfied: backoff>=1.10.0 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from langfuse) (2.2.1)\n",
+      "Requirement already satisfied: httpx<1.0,>=0.15.4 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from langfuse) (0.28.1)\n",
+      "Requirement already satisfied: opentelemetry-api<2.0.0,>=1.33.1 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from langfuse) (1.35.0)\n",
+      "Requirement already satisfied: opentelemetry-exporter-otlp<2.0.0,>=1.33.1 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from langfuse) (1.35.0)\n",
+      "Requirement already satisfied: opentelemetry-sdk<2.0.0,>=1.33.1 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from langfuse) (1.35.0)\n",
+      "Requirement already satisfied: packaging<25.0,>=23.2 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from langfuse) (24.2)\n",
+      "Requirement already satisfied: pydantic<3.0,>=1.10.7 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from langfuse) (2.11.7)\n",
+      "Requirement already satisfied: requests<3,>=2 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from langfuse) (2.32.4)\n",
+      "Requirement already satisfied: wrapt<2.0,>=1.14 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from langfuse) (1.17.2)\n",
+      "Requirement already satisfied: anyio in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from httpx<1.0,>=0.15.4->langfuse) (4.9.0)\n",
+      "Requirement already satisfied: certifi in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from httpx<1.0,>=0.15.4->langfuse) (2025.7.14)\n",
+      "Requirement already satisfied: httpcore==1.* in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from httpx<1.0,>=0.15.4->langfuse) (1.0.9)\n",
+      "Requirement already satisfied: idna in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from httpx<1.0,>=0.15.4->langfuse) (3.10)\n",
+      "Requirement already satisfied: h11>=0.16 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from httpcore==1.*->httpx<1.0,>=0.15.4->langfuse) (0.16.0)\n",
+      "Requirement already satisfied: importlib-metadata<8.8.0,>=6.0 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from opentelemetry-api<2.0.0,>=1.33.1->langfuse) (8.7.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.5.0 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from opentelemetry-api<2.0.0,>=1.33.1->langfuse) (4.14.1)\n",
+      "Requirement already satisfied: zipp>=3.20 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from importlib-metadata<8.8.0,>=6.0->opentelemetry-api<2.0.0,>=1.33.1->langfuse) (3.23.0)\n",
+      "Requirement already satisfied: opentelemetry-exporter-otlp-proto-grpc==1.35.0 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from opentelemetry-exporter-otlp<2.0.0,>=1.33.1->langfuse) (1.35.0)\n",
+      "Requirement already satisfied: opentelemetry-exporter-otlp-proto-http==1.35.0 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from opentelemetry-exporter-otlp<2.0.0,>=1.33.1->langfuse) (1.35.0)\n",
+      "Requirement already satisfied: googleapis-common-protos~=1.57 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from opentelemetry-exporter-otlp-proto-grpc==1.35.0->opentelemetry-exporter-otlp<2.0.0,>=1.33.1->langfuse) (1.70.0)\n",
+      "Requirement already satisfied: grpcio<2.0.0,>=1.63.2 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from opentelemetry-exporter-otlp-proto-grpc==1.35.0->opentelemetry-exporter-otlp<2.0.0,>=1.33.1->langfuse) (1.73.1)\n",
+      "Requirement already satisfied: opentelemetry-exporter-otlp-proto-common==1.35.0 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from opentelemetry-exporter-otlp-proto-grpc==1.35.0->opentelemetry-exporter-otlp<2.0.0,>=1.33.1->langfuse) (1.35.0)\n",
+      "Requirement already satisfied: opentelemetry-proto==1.35.0 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from opentelemetry-exporter-otlp-proto-grpc==1.35.0->opentelemetry-exporter-otlp<2.0.0,>=1.33.1->langfuse) (1.35.0)\n",
+      "Requirement already satisfied: protobuf<7.0,>=5.0 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from opentelemetry-proto==1.35.0->opentelemetry-exporter-otlp-proto-grpc==1.35.0->opentelemetry-exporter-otlp<2.0.0,>=1.33.1->langfuse) (6.31.1)\n",
+      "Requirement already satisfied: opentelemetry-semantic-conventions==0.56b0 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from opentelemetry-sdk<2.0.0,>=1.33.1->langfuse) (0.56b0)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from pydantic<3.0,>=1.10.7->langfuse) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.33.2 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from pydantic<3.0,>=1.10.7->langfuse) (2.33.2)\n",
+      "Requirement already satisfied: typing-inspection>=0.4.0 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from pydantic<3.0,>=1.10.7->langfuse) (0.4.1)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from requests<3,>=2->langfuse) (3.4.2)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from requests<3,>=2->langfuse) (2.5.0)\n",
+      "Requirement already satisfied: sniffio>=1.1 in c:\\users\\eliec\\documents\\code\\certif_devia\\.venv\\lib\\site-packages (from anyio->httpx<1.0,>=0.15.4->langfuse) (1.3.1)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -83,7 +116,8 @@
    "source": [
     "%pip install vanna[openai]\n",
     "%pip install python-dotenv\n",
-    "%pip install pandas"
+    "%pip install pandas\n",
+    "%pip install langfuse"
    ]
   },
   {
@@ -91,28 +125,21 @@
    "execution_count": 2,
    "id": "ccd5726f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from vanna.openai import OpenAI_Chat\n",
     "from vanna.base import VannaBase\n",
     "from vanna.flask import VannaFlaskApp\n",
     "from vanna.flask.auth import AuthInterface\n",
+    "from langfuse.openai import openai\n",
     "import flask\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
-    "load_dotenv()"
+    "load_dotenv()\n",
+    "# Configuration des variables d'environnement pour Langfuse\n",
+    "os.environ[\"LANGFUSE_SECRET_KEY\"] = os.getenv('LANGFUSE_SECRET_KEY')\n",
+    "os.environ[\"LANGFUSE_PUBLIC_KEY\"] = os.getenv('LANGFUSE_PUBLIC_KEY')"
    ]
   },
   {
@@ -182,6 +209,7 @@
     "        self.ddl_list = []  # Initialise les listes directement ici\n",
     "        self.documentation_list = []\n",
     "        self.question_sql_list = []\n",
+    "        self._client = openai.OpenAI(api_key=os.getenv('OPENAI_API_KEY'))\n",
     "\n",
     "vn = MyVanna(config={'api_key': os.getenv('OPENAI_API_KEY'), 'model': 'gpt-4o-mini'})\n"
    ]
@@ -1031,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "23c0cdfb",
    "metadata": {},
    "outputs": [
@@ -1039,14 +1067,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "https://cloud.langfuse.com\n",
       "Your app is running at:\n",
       "http://localhost:8084\n",
       " * Serving Flask app 'vanna.flask'\n",
-      " * Debug mode: on\n",
-      "Using model gpt-4o-mini for 4054.25 tokens (approx)\n",
-      "Using model gpt-4o-mini for 106.75 tokens (approx)\n",
-      "Using model gpt-4o-mini for 4059.25 tokens (approx)\n",
-      "Using model gpt-4o-mini for 90.75 tokens (approx)\n"
+      " * Debug mode: on\n"
      ]
     }
    ],
@@ -1196,6 +1221,9 @@
     "        response = flask.make_response('Logged out')\n",
     "        response.delete_cookie('user')\n",
     "        return response\n",
+    "    \n",
+    "print(\"Monitorer avec LangFuse :\")    \n",
+    "print(\"https://cloud.langfuse.com\")\n",
     "\n",
     "VannaFlaskApp(\n",
     "    vn=vn,\n",
@@ -1229,7 +1257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
